--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^16.14.25",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.24",
+    "@types/seedrandom": "^3.0.2",
+    "miragejs": "^0.1.43",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
+    "seedrandom": "^3.0.5",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.1.2"
   }
 }
