--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.48",
     "@types/react": "^16.14.25",
-    "@types/react-dom": "^16.9.14",
+    "@types/react-dom": "^16.9.15",
     "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/seedrandom": "^3.0.2",
     "miragejs": "^0.1.43",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
     "seedrandom": "^3.0.5",
